_sass/base/general.sass
body, html
    font-size: 100%

body
    line-height: 2
    font: 14px $fontSans
    color: $alpha
    background: #ffffff 

h1, h2, h3, h4
    font-family: $fontSans
    color: $beta
    -webkit-font-smoothing: antialiased
    text-rendering: optimizeLegibility
    margin-top: -1px
    margin-bottom: 0.5rem // Reduced margin-bottom

h1
    font-size: 1.25rem
    letter-spacing: -1px
    color: $beta
    font-weight: 600
    margin-bottom: 0.5rem // Reduced margin-bottom

h2
    font-size: 1rem
    margin-bottom: 0.5rem // Reduced margin-bottom

h3
    font-size: .6rem

h4
    font-size: .4rem

a
    color: $delta
    text-decoration: underline

p
    line-height: 2
    color: $alpha
    font-weight: 400 
    font-family: $fontSans
    margin-bottom: 0.5rem // Reduced margin-bottom
    letter-spacing: 0.4px

    @media #{$mobile}
        letter-spacing: 0.2px

strong
    font-weight: 900
    color: #000

ul,
ol
    li
        font-weight: 500
        color: $alpha

img,
pre,
iframe
    max-width: 100%
    height: auto // Ensure images maintain their aspect ratio

img
    border-radius: 4px

pre
    border-radius: 4px

figcaption
    position: relative
    top: -1.25rem
    left: 0
    right: 0
    margin: 0 auto
    width: 100%
    text-align: center
    font-size: 1.3rem
    color: $alpha
    font-weight: 300

    @media #{$mobile}
        font-size: 1.2rem

blockquote
    padding-left: 1rem
    border-left: 0.2rem solid #eee

hr
    border: none
    height: 0.1rem
    margin: 0.5rem 0
    background: #eee
    width: 100%

figure.highlight
    width: 100%
    margin: 0

code,
tt
    padding: 0.1rem 0
    font-family: $fontMonospace
    font-size: 0.75rem
    line-height: 1.25rem
    background: #f5f5f5
    border-radius: 0.125rem

pre
    box-sizing: border-box
    margin: 0 0 1.75em 0
    width: 100%
    padding: 0.3125rem 0.625rem
    font-family: $fontMonospace
    font-size: 1.2rem
    line-height: 2rem
    overflow: auto
    background: #f5f5f5
    border: 1px solid $epsilon
    border-radius: 0.125rem

.wrapper-normal,
.wrapper-large
    height: 100%
    width: 96%
    margin: 0 auto

    @media #{$mobile}
        width: 88%

    @media #{$tablet}
        width: 88%

.wrapper-normal
    max-width: 560px

.wrapper-large
    max-width: 810px

